--- a/manifest.json
+++ b/manifest.json
@@ -1,29 +1,42 @@
 {
-
-  "manifest_version": 2,
-
+  "manifest_version": 3,
   "author": "Kristijan Rosandić",
-  "name": "e-Dnevnik Plus za nastavnike", "short_name": "e-Dnevnik+ Nastavnici",
+  "name": "e-Dnevnik Plus za nastavnike",
+  "short_name": "e-Dnevnik+ Nastavnici",
   "description": "Napredne mogućnosti e-Dnevnika za nastavnike.",
-  "version": "1.1.2",
-
-  "permissions": [
+  "version": "1.1.3",
+  "host_permissions": [
     "https://e-dnevnik.skole.hr/"
   ],
-
-  "icons": {"128": "images/icon-128.png"},
-
-  "browser_action": {"default_icon": "images/icon-19.png",
-                     "default_popup": "extension/popup.html"},
-
-  "content_scripts": [{
-    "js":      ["student/student.js"],
-    "css":     ["student/student.css"],
-    "matches": ["https://e-dnevnik.skole.hr/*"]
-  }, {
-    "js":      ["students/students.js"],
-    "css":     ["students/students.css"],
-    "matches": ["https://e-dnevnik.skole.hr/grade_book/student_list/*"]
-  }]
-
+  "icons": {
+    "128": "images/icon-128.png"
+  },
+  "action": {
+    "default_icon": "images/icon-19.png",
+    "default_popup": "extension/popup.html"
+  },
+  "content_scripts": [
+    {
+      "js": [
+        "student/student.js"
+      ],
+      "css": [
+        "student/student.css"
+      ],
+      "matches": [
+        "https://e-dnevnik.skole.hr/*"
+      ]
+    },
+    {
+      "js": [
+        "students/students.js"
+      ],
+      "css": [
+        "students/students.css"
+      ],
+      "matches": [
+        "https://e-dnevnik.skole.hr/grade_book/student_list/*"
+      ]
+    }
+  ]
 }
